--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -5,3 +5,5 @@ INPUT                  = "@CMAKE_SOURCE_DIR@/include" "@CMAKE_SOURCE_DIR@/README
 RECURSIVE              = YES
 GENERATE_LATEX         = NO
 USE_MDFILE_AS_MAINPAGE = "@CMAKE_SOURCE_DIR@/README.md"
+EXAMPLE_PATH           = ./examples
+EXAMPLE_RECURSIVE      = YES
